--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Märta Ballardini</title>
         <meta charset="UTF-8">
+        <meta name="description" content="My name is Märta Ballardini and here is my website! Here you can find some of the work i've done previously and my contact information! Enjoy!">
+        <meta name="keywords" content="Märta Ballardini, webbutveckling, frontendutveckling, Medieinstitutet">
+        <link rel="apple-touch-icon" sizes="180x180" href="img-min/favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img-min/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img-min/favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="img-min/favicon_io/site.webmanifest">
         <link rel="stylesheet" href="/css/main.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Hanalei&display=swap" rel="stylesheet">    
@@ -12,7 +18,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
         <script src="script.js"></script>
         <link rel="stylesheet" href="/css/main.css">
-
         <script src="https://kit.fontawesome.com/8ba7ccfbdc.js" crossorigin="anonymous"></script>
     </head>
 
@@ -56,29 +61,29 @@
                     <div class="pic-gallery">
                         <ul>
                             <div class="img__wrap">
-                                <img class="img__img" src="img/smink.jpg" />
+                                <img class="img__img" src="img-min/smink-min.jpg" alt="me"/>
                                 <p class="img__description">A pic of me.</p>
                             </div>
                             <div class="img__wrap">
-                                <img class="img__img" src="img/molly.jpg"/>
+                                <img class="img__img" src="img-min/molly-min.jpg" alt="molly"/>
                                 <p class="img__description">My friend Molly.</p>
                             </div>
                             <div class="img__wrap">
-                                <img class="img__img" src="img/wilma.png" />
+                                <img class="img__img" src="img-min/wilma-min.png" alt="wilma"/>
                                 <p class="img__description">My friend Wilma.</p>
                             </div>
                         </ul>
                         <ul>
                             <div class="img__wrap">
-                                <img class="img__img" src="img/midsommar.jpg" />
+                                <img class="img__img" src="img-min/midsommar-min.jpg" alt="midsommer"/>
                                 <p class="img__description">Some of my friends celebrating midsummer.</p>
                             </div>
                             <div class="img__wrap">
-                                <img class="img__img" src="img/simon.jpg" />
+                                <img class="img__img" src="img-min/simon-min.jpg" alt="simon"/>
                                 <p class="img__description">My boyfriend Simon.</p>
                             </div>
                             <div class="img__wrap">
-                                <img class="img__img" src="img/mirre.jpg" />
+                                <img class="img__img" src="img-min/mirre-min.jpg" alt="Miriam"/>
                                 <p class="img__description">My friend Miriam.</p>
                             </div>
                         </ul>
@@ -94,16 +99,16 @@
                     <div id="todolistnodejs" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="img/todolistauth.png" class="d-block w-100" alt="todolist">
+                            <img src="img-min/todolistauth-min.png" class="d-block w-100" alt="todolist">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/login.png" class="d-block w-100" alt="login page">
+                            <img src="img-min/login-min.png" class="d-block w-100" alt="login page">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/register.png" class="d-block w-100" alt="register page">
+                            <img src="img-min/register-min.png" class="d-block w-100" alt="register page">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/resetpass.png" class="d-block w-100" alt="reset password page">
+                            <img src="img-min/resetpass-min.png" class="d-block w-100" alt="reset password page">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#todolistnodejs"  data-bs-slide="prev">
@@ -123,16 +128,16 @@
                     <div id="todolistjs" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="img/todolistjs.png" class="d-block w-100" alt="todolist">
+                            <img src="img-min/todolistjs-min.png" class="d-block w-100" alt="todolist">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/unchecked.png" class="d-block w-100" alt="login page">
+                            <img src="img-min/unchecked-min.png" class="d-block w-100" alt="unchecked page">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/checked.png" class="d-block w-100" alt="register page">
+                            <img src="img-min/checked-min.png" class="d-block w-100" alt="checked page">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/removed.png" class="d-block w-100" alt="reset password page">
+                            <img src="img-min/removed-min.png" class="d-block w-100" alt="removed page">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#todolistjs"  data-bs-slide="prev">
@@ -152,13 +157,13 @@
                     <div id="jstodolist" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="img/besattstart.png" class="d-block w-100" alt="todolist">
+                            <img src="img-min/besattstart-min.png" class="d-block w-100" alt="todolist">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/besattköp.png" class="d-block w-100" alt="login page">
+                            <img src="img-min/besattköp-min.png" class="d-block w-100" alt="login page">
                           </div>
                           <div class="carousel-item">
-                            <img src="img/besattbutiker.png" class="d-block w-100" alt="register page">
+                            <img src="img-min/besattbutiker-min.png" class="d-block w-100" alt="register page">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#jstodolist"  data-bs-slide="prev">
@@ -255,7 +260,7 @@
                 <li><a href="https://github.com/ballardinimarta" target="_blank"><i class="fab fa-github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/m%C3%A4rta-ballardini-403a6a165/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             </ul>
-            <img src="img/bye.PNG" alt="">
+            <img src="img-min/bye-min.PNG" alt="Goodbye picture of me">
             <p>Thank u for visiting my website!</p>
         </section>
     
