metaimage and some responsivity

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta charset="UTF-8">
         <meta name="description" content="My name is Märta Ballardini and here is my website! Here you can find some of the work i've done previously and my contact information! Enjoy!">
         <meta name="keywords" content="Märta Ballardini, webbutveckling, frontendutveckling, Medieinstitutet">
+        <meta property="og:image" content="https://ballardini.se/img-min/favicon_io/android-chrome-512x512.png">
+
         <link rel="apple-touch-icon" sizes="180x180" href="img-min/favicon_io/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="img-min/favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="img-min/favicon_io/favicon-16x16.png">
