--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <meta charset="UTF-8">
         <meta name="description" content="My name is Märta Ballardini and here is my website! Here you can find some of the work i've done previously and my contact information! Enjoy!">
         <meta name="keywords" content="Märta Ballardini, webbutveckling, frontendutveckling, Medieinstitutet">
+        <meta property="og:title" content="Märta Ballardini">
         <meta property="og:image" content="https://ballardini.se/img-min/favicon_io/android-chrome-512x512.png">
+        <meta property="og:description" content="My name is Märta Ballardini and here is my website! Here you can find some of the work i've done previously and my contact information! Enjoy!">
+
 
         <link rel="apple-touch-icon" sizes="180x180" href="img-min/favicon_io/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="img-min/favicon_io/favicon-32x32.png">
@@ -152,10 +155,10 @@
                         </button>
                       </div>
                     <p class="projekttitle">Todolist Vanilla JavaScript</p>
-                    <p class="projektdescription">Assignment for school. A todolist where you can make new tasks, check done tasks and delete tasks. It also has a filter feature where you canm select to see Standard, Undone, Done, Removed. You can also bring back a removed Task.</p>
+                    <p class="projektdescription">Assignment for school. A todolist where you can make new tasks, check done tasks and delete tasks. It also has a filter feature where you can select to see Standard, Undone, Done, Removed. You can also bring back a removed Task.</p>
                     <a href="https://github.com/ballardinimarta/todolist"  target="_blank" class="projektlink">github repo</a>
                 </div>
-                <!-- <div class="projektcontainer">
+                 <div class="projektcontainer">
                     <div id="jstodolist" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
@@ -179,8 +182,10 @@
                       </div>
                     <p class="projekttitle">Besatt Magazine</p>
                     <p class="projektdescription">A website for besatt magazine. Besatt is a analog paper magazine made by my friends. They needed a website to spread information about where you can buy the magazine and how you can order it from them.</p>
-                    <a href="https://github.com/ballardinimarta/BESATT" target="_blank" class="projektlink">github repo</a>
-                </div> -->
+                    <a href="https://github.com/ballardinimarta/BESATT2.0" target="_blank" class="projektlink">github repo</a>
+                    <a href="https://besatt.org/" target="_blank" class="projektlink">link to the website</a>
+
+                </div> 
             </div>
         </section>        
 
@@ -239,7 +244,7 @@
                         </div>
                         <div class="skill">
                             <strong class="work-title skill-title">Knowledge</strong>
-                            <p class="work-description skill-description">I have knowledge in programming languages as <em>HTML, CSS, JavaScript</em> and <em>Python.</em></p>
+                            <p class="work-description skill-description">I have knowledge in programming languages as <em>HTML, CSS, JavaScript</em> and <em>Python.</em> I also know <em>jQuery, NodeJS, Git</em> and <em>Agile workflow (Scrum).</em></p>
                         </div>
                         <div class="skill">
                             <strong class="work-title skill-title">languages</strong>
