--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
         <meta property="og:image" content="https://ballardini.se/img-min/favicon_io/android-chrome-512x512.png">
         <meta property="og:description" content="My name is Märta Ballardini and here is my website! Here you can find some of the work i've done previously and my contact information! Enjoy!">
 
-
-        <link rel="apple-touch-icon" sizes="180x180" href="img-min/favicon_io/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="img-min/favicon_io/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="img-min/favicon_io/favicon-16x16.png">
-        <link rel="manifest" href="img-min/favicon_io/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5fcc8d">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
         <link rel="stylesheet" href="/css/main.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Hanalei&display=swap" rel="stylesheet">    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
@@ -42,7 +43,7 @@
         </div>
 
         <header id="header">
-            <h1 id="nameTitle">Märta Ballardini</h1>
+            <h1 id="nameTitle"> < Märta Ballardini /> </h1>
             <ul id="headingNav">
                 <li><a class="link" href="#who-am-i">Who am i ?</a></li>
                 <li><a class="link" href="#portfolio">Portfolio.</a></li>
